# eml-extractor

./: .editorconfig  LICENSE  README.md  eml_attachments_extractor.py  eml_extractor.py  setup.cfg
tests/: test_eml_extractor.py
tests/data/: file with attachments.eml  file without attachments.eml
