[metadata]
name = eml-extractor
version = 0.1.1
author = Diogo Alves
author_email = diogo.alves.ti@gmail.com
description = A CLI tool to extract attachments from .eml files (email messages saved as files)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/diogo-alves/eml-extractor
platform = any
keywords = cli, eml, email, attachments, extract
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Communications :: Email
    Topic :: Utilities

[options]
py_modules = eml_extractor
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    eml-extractor = eml_extractor:main

[mypy]
ignore_missing_imports = True
